--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react-bootstrap": "^2.10.1",
     "react-context": "^0.0.3",
     "react-dom": "18.2.0",
-    "react-router-dom": "6.15.0"
+    "react-router-dom": "6.15.0",
+    "react-toastify": "^10.0.5",
+    "sweetalert2": "^11.10.7"
   },
   "devDependencies": {
     "@types/react": "18.2.15",
